# vdora

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release-linux.yml  rust-ci.yml  security-audit.yml
src/: app.rs  config.rs  diagnostics.rs  main.rs  oneshot.rs  state.rs  tray.rs
src/audio/: recorder.rs
src/hotkey/: mod.rs
src/insert/: clipboard.rs  paste.rs
src/stt/: whisper.rs
