[package]
name = "vdora"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
directories = "5.0"
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_4"] }
hound = "3.5"
nix = { version = "0.29", features = ["signal", "process"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
tempfile = "3.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
which = "6.0"
whisper-rs = "0.12"
ksni = "0.2"
